Implemented progress bar for layer removal & prepared for page transplants